Bug 391112 - rating from download dialog overview broken
Summary: rating from download dialog overview broken
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.43.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Jeremy Whiting
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-26 16:46 UTC by Harald Sitter
Modified: 2018-06-13 13:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
screenshot (210.56 KB, image/png)
2018-02-26 16:47 UTC, Harald Sitter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2018-02-26 16:46:25 UTC
On the download dialog overview, try to rate any entry via the stars. The starts will update but nothing will happen. There is no output on the terminal to even suggest that any request was even sent.
Comment 1 Harald Sitter 2018-02-26 16:47:13 UTC
Created attachment 111022 [details]
screenshot
Comment 2 Nate Graham 2018-06-13 13:15:00 UTC
Fixed with https://phabricator.kde.org/D11173