Actually vote when clicking stars in the list view

This connects up the ratings widget in the list view
delegate with the engine, using the same vote logic
found in the details view

This code has been missing for what i can only
assume is a very long time. Nobody will have known,
because the ratings widget updates its view
immediately and only then sends the request off for
voting.

BUG: 391112
Differential Revision: https://phabricator.kde.org/D11173